Add mapping for Xbox One S controller on Linux and Android

This brings the functionality of the One S controller over Bluetooth
on Android and Linux up to parity with Windows and Mac mappings.

BUG=659901
TEST=http://html5gamepad.com/

Review-Url: https://codereview.chromium.org/2455653003
Cr-Commit-Position: refs/heads/master@{#428242}

Former-commit-id: 213cc34910a02a969800bc9e8de9d0becdeb4852